# CAS-Core

./: README.md  bun.lockb  package-lock.json  package.json
src/: App.css  App.jsx
src-tauri/: .gitignore  .taurignore  Cargo.toml  tauri.conf.json
src-tauri/assets/templates/: etiquetas.typ  mantenimiento_preventivo_fime.typ
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  typst_renderer.rs
src-tauri/src/assets/templates/: etiquetas.typ
src-tauri/src/db_service/: equipment.rs  maintenance.rs  mod.rs  model.rs  statistics.rs  tests.rs
src-tauri/src/labels/: mod.rs
src-tauri/src/typst_renderer/: environment.rs  tests.rs
src/components/: Bar.jsx  Etiquetas.jsx  General.jsx  Line.jsx  PDF.jsx  Sidebar.jsx  Tarjeta.jsx
